--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.0-rc.0",
-    "@angular/cdk": "^14.0.0-rc.0",
-    "@angular/common": "^14.0.0-rc.0",
-    "@angular/compiler": "^14.0.0-rc.0",
-    "@angular/core": "^14.0.0-rc.0",
-    "@angular/forms": "^14.0.0-rc.0",
-    "@angular/google-maps": "^14.0.0-rc.0",
-    "@angular/material": "^14.0.0-rc.0",
-    "@angular/platform-browser": "^14.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^14.0.0-rc.0",
-    "@angular/router": "~14.0.0-rc.0",
+    "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/google-maps": "^14.0.0",
+    "@angular/material": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.0-rc.0",
-    "@angular-eslint/builder": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "13.0.0-alpha.0",
-    "@angular-eslint/schematics": "13.0.0-alpha.0",
-    "@angular-eslint/template-parser": "13.0.0-alpha.0",
-    "@angular/cli": "~14.0.0-rc.0",
-    "@angular/compiler-cli": "~14.0.0-rc.0",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular-eslint/builder": "^14.0.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.4.0",
@@ -43,7 +43,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.9.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.19",
     "karma-chrome-launcher": "~3.1.0",
@@ -53,6 +53,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "^4.6.4"
   }
 }
